Code is working correctly now after so many failures.
